study lab components

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -85,7 +85,7 @@
                                                   class="btn btn-sm btn-outline-secondary">
                                     Edit
                                 </button> *@
-                                <a href="#">Go to Study Lab...</a>
+                                <a href="/StudyLab">Go to Study Lab...</a>
                             </div> @* <small class="text-body-secondary">9 mins</small> *@
                         </div>
                     </div>
