--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,11 +1,4 @@
 ﻿<!DOCTYPE html>
-<style>
-    .action-li {
-        background-color: darkorange;
-        border-radius: 8px;
-    }
-
-</style>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -14,6 +7,41 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Classly.styles.css" asp-append-version="true" />
+    <style>
+        .action-li {
+            background-color: darkorange;
+            border-radius: 8px;
+        }
+
+        .rounded-pill {
+            width: fit-content;
+            padding-left: 10px;
+            padding-right:10px;
+            padding-top: 8px;
+            padding-bottom: 8px;
+        }
+
+        .btn-primary {
+            background-color: darkorange;
+            color: white;
+        }
+        p {
+            color: dimgrey;
+        }
+        .bg-primary {
+            background-color: darkorange !important;
+        }
+        .bg-secondary {
+            background-color: #80808029 !important;
+            color: grey;
+        }
+        .avatar-bg {
+            background-color: #ff8c004f;
+            width: 50px;
+            height: 50px;
+            border-radius: 30px;
+        }
+    </style>
 </head>
 <body>
     <header>
