--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
                                                   class="btn btn-sm btn-outline-secondary">
                                     Edit
                                 </button> *@
-                                <a href="#">Go to Marketplace...</a>
+                                <a href="/Marketplace">Go to Marketplace...</a>
                             </div> @* <small class="text-body-secondary">9 mins</small> *@
                         </div>
                     </div>
