--- a/Views/Marketplace/Basket.cshtml
+++ b/Views/Marketplace/Basket.cshtml
@@ -22,14 +22,14 @@
             <li class="list-group-item d-flex justify-content-between"> <span>Total (GBP)</span> <strong>£20</strong>
             </li>
         </ul>
-        <form class="card p-2">
+        <div class="card p-2">
             <div class="input-group"> <input type="text" class="form-control" placeholder="Promo code"> <button
                     type="submit" class="btn btn-secondary">Redeem</button> </div>
-        </form>
+        </div>
     </div>
     <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">Billing address</h4>
-        <form class="needs-validation" novalidate="">
+        <div class="needs-validation" novalidate="">
             <div class="row g-3">
                 <div class="col-sm-6"> <label for="firstName" class="form-label">First name</label> <input type="text"
                         class="form-control" id="firstName" placeholder="" value="Dan" required="">
@@ -135,7 +135,11 @@
                     </div>
                 </div>
             </div>
+            <form method="post" action="@Url.Action("CreateCheckoutSession", "Payment")">
+                <button type="submit" class="btn btn-primary">Pay with Stripe</button>
+            </form>
+
             <hr class="my-4"> <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
-        </form>
+        </div>
     </div>
 </div>
