--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -11,12 +11,12 @@
     <label for="inputEmail" class="sr-only">Email address</label>
     <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
     <label for="inputPassword" class="sr-only">Password</label>
-    <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-    <div class="checkbox mb-3">
+    <input name="password" type="password" id="inputPassword" class="form-control mb-3" placeholder="Password" required="">
+@*     <div class="checkbox mb-3">
         <label>
             <input type="checkbox" value="remember-me"> Remember me
         </label>
-    </div>
+    </div> *@
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
 </form>
