--- a/Views/Login/Register.cshtml
+++ b/Views/Login/Register.cshtml
@@ -8,10 +8,12 @@
             @ViewBag.Error
         </div>
     }
+    <label for="inputName" class="sr-only">Name</label>
+    <input name="name" type="text" id="inputName" class="form-control" placeholder="Name" required autofocus="">
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+    <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus="">
     <label for="inputPassword" class="sr-only">Password</label>
-    <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+    <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
     <div class="checkbox mb-3">
         <label>
             <input type="checkbox" value="remember-me"> Remember me
