--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -65,21 +65,23 @@
             <div class="container-fluid">
                 
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Classly</a>
-                
+
                 <div class="d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1 justify-content-end">
+                    <ul class="d-flex flex-row flex-wrap align-items-center list-unstyled mb-0">
                         @if (User.Identity != null && User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item action-li">
-                                <a class="nav-link text-white" asp-controller="Marketplace" asp-action="Basket">Basket<span id="basket-cnt" class="badge text-bg-danger"></span></a>
+                            <li class="me-2 action-li">
+                                <a class="nav-link text-white" asp-controller="Marketplace" asp-action="Basket">
+                                    Basket <span id="basket-cnt" class="badge text-bg-danger"></span>
+                                </a>
                             </li>
-
-                            <li class="nav-item action-li-outline ms-3">
+                            <li>
                                 <a class="nav-link text-black" href="@Url.Action("Logout", "Login")">Logout</a>
                             </li>
                         }
                     </ul>
                 </div>
+
             </div>
         </nav>
     </header>
