working AI transactions - needs loads of styling

--- a/Views/Login/Register.cshtml
+++ b/Views/Login/Register.cshtml
@@ -19,6 +19,11 @@
             <input type="checkbox" value="remember-me"> Remember me
         </label>
     </div>
+    <div class="checkbox mb-3">
+        <label>
+            <input name="isTutor" type="checkbox" value="true"> Sign up as Tutor
+        </label>
+    </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
     <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
 </form>
