--- a/Views/CourseNotes/UploadStudyNotes.cshtml
+++ b/Views/CourseNotes/UploadStudyNotes.cshtml
@@ -32,6 +32,9 @@
             <option value="C2">C2 (Proficient)</option>
         </select>
     </div>
+    <h3>Specify homework format</h3>
+    <input type="checkbox"/><label>Fill in the blanks</label>
+    <input type="checkbox" /><label>Whatever</label>
     <br/>
     <button type="submit" class="btn btn-primary">Send to Server</button>
 </form>
