--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -98,12 +98,14 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1 justify-content-center">
+                            @if (User.Claims.FirstOrDefault(x => x.Type == "IsTutor")?.Value != "True"){
                         <li class="nav-item me-4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Marketplace" asp-action="Index">Marketplace</a>
                         </li>
                         <li class="nav-item me-4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="StudyLab" asp-action="Index">Study Lab</a>
                         </li>
+                            }
                         <li class="nav-item me-4">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Community" asp-action="Index">Community</a>
                         </li>
