--- a/Views/CourseNotes/UploadStudyNotes.cshtml
+++ b/Views/CourseNotes/UploadStudyNotes.cshtml
@@ -8,15 +8,15 @@
 
 <form asp-action="UploadStudyNotes" asp-controller="CourseNotes" method="post" enctype="multipart/form-data">
     <input type="hidden" name="studentId" value="@ViewBag.StudentId"/>
-    <div class="form-group">
+@*     <div class="form-group">
         <label for="RichText">Lesson notes</label>
         <aside>Enter you lesson notes here. Our AI assitant will review them and create homework and follow up tasks based on the difficulty level you select.</aside>
         <!-- Rich Text Editor (you can wire up TinyMCE, CKEditor, or Quill here) -->
         <textarea id="RichText" name="RichText" class="form-control"></textarea>
-    </div>
+    </div> *@
 
     <div class="form-group">
-        <label for="FileUpload">Or Upload a File</label>
+        <label for="FileUpload">Upload a plain text file</label>
         <input type="file" id="FileUpload" name="FileUpload" class="form-control" />
     </div>
     <br/>
@@ -66,6 +66,16 @@
         <option value="true">Yes</option>
         <option value="false">No</option>
     </select>
+    <br/>
+    <div class="form-group">
+        <label>Topic of next lesson</label>
+        <input class="form-control" name="topicOfNextLesson" />
+    </div>
+    <br/>
+    <div class="form-group">
+        <label>Next lesson duration (Minutes)</label>
+        <input class="form-control" type="number" name="lessonDuration" />
+    </div>
     <br/>
     <button type="submit" class="btn btn-primary">Send to Server</button>
 </form>
