--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -85,6 +86,10 @@
             </div>
         </nav>
     </header>
+
+    @{
+        var email = User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Email)?.Value;
+    }
     <div class="container">
 
         @if (User.Identity.IsAuthenticated)
@@ -117,7 +122,14 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="CourseNotes" asp-action="Index">Course Notes</a>
                             </li>
                         }
-                    </ul>
+                            @if ((email ?? string.Empty).ToLower() == "rickyjones28@gmail.com" ||
+                            (email ?? string.Empty) == "daniel-einon@live.co.uk")
+                            {
+                                <li class="nav-item me-4">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">ADMIN</a>
+                                </li>
+                            }
+                        </ul>
                 </div>
             </div>
         </nav>
