--- a/Views/Login/Register.cshtml
+++ b/Views/Login/Register.cshtml
@@ -14,6 +14,8 @@
     <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus="">
     <label for="inputPassword" class="sr-only">Password</label>
     <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+    <label for="inputLocation" class="sr-only">Location</label>
+    <input name="location" id="inputLocation" class="form-control" placeholder="Location">
 
     <div class="checkbox mb-3">
         
