--- a/Views/Home/TutorIndex.cshtml
+++ b/Views/Home/TutorIndex.cshtml
@@ -112,7 +112,7 @@
                                                   class="btn btn-sm btn-outline-secondary">
                                     Edit
                                 </button> *@
-                                <a href="#">Go to Community...</a>
+                                <a onclick="alert('Coming Soon!')">Go to Community...</a>
                             </div> @* <small class="text-body-secondary">9 mins</small> *@
                         </div>
                     </div>
