--- a/Views/StudentManagement/Index.cshtml
+++ b/Views/StudentManagement/Index.cshtml
@@ -26,11 +26,16 @@
 <h2>Your Students</h2>
 <div class="row">
     <div class="col">
-        <ul>
-            @foreach (var student in await userService.GetStudentsAsync(tutorId)){
-                <li>@student.Name</li>
+        <ul class="list-group">
+            @foreach (var student in await userService.GetStudentsAsync(tutorId))
+            {
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    @student.Name
+                   @*  <span class="badge bg-primary rounded-pill">Student</span> *@
+                </li>
             }
         </ul>
+
     </div>
     <div class="col">
         <h3>Looking to invite new students?</h3>
