homework submission WIP

--- a/Views/CourseNotes/UploadStudyNotes.cshtml
+++ b/Views/CourseNotes/UploadStudyNotes.cshtml
@@ -14,11 +14,15 @@
         <!-- Rich Text Editor (you can wire up TinyMCE, CKEditor, or Quill here) -->
         <textarea id="RichText" name="RichText" class="form-control"></textarea>
     </div> *@
-
+    <div class="form-group">
+        <label>Topic of this lesson</label>
+        <input class="form-control" name="Topic" />
+    </div>
     <div class="form-group">
         <label for="FileUpload">Upload a plain text file</label>
         <input type="file" id="FileUpload" name="FileUpload" class="form-control" />
     </div>
+
     <br/>
     <div class="form-group">
         <label for="Difficulty">Difficulty Level</label>
